--- a/Tution_app/package.json
+++ b/Tution_app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-config": "^1.5.9",
